<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:text="@string/using_help"
            android:textSize="20sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/about_private_space"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/content1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/about_private_space_desc" />

            <TextView
                android:id="@+id/title5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/about_uninstall"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/content5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/about_uninstall_des" />

            <TextView
                android:id="@+id/title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/about_enter"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/content2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/about_enter_desc" />

            <TextView
                android:id="@+id/title3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/about_exit"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/content3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/about_exit_desc" />

            <TextView
                android:id="@+id/title4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/about_forget_pwd"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/content4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/about_forget_pwd_desc" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>