<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/grad_bac3"
              android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/alfa_slab_one"
        android:gravity="bottom"
        android:text="Settings"
        android:textColor="@color/white"
        android:textSize="28dp" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="Login Settings"
                android:textColor="@color/colorAccent" />

            <RelativeLayout
                android:id="@+id/rv1"
                android:layout_margin="5dp"
                android:background="@drawable/settings_button_back"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:onClick="onClick"
                android:paddingBottom="15dp"
                android:paddingTop="15dp">

                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"/>

                <ImageView
                    android:id="@+id/iv1"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/ic_fingerprint"/>

                <TextView
                    android:id="@+id/tv1"
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@id/iv1"
                    android:text="@string/private_fingerprint"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv1"
                    android:layout_toEndOf="@id/iv1"
                    android:layout_toStartOf="@id/switch1"
                    android:text="@string/enter_private_space_by_private_fingerprint"
                    android:textColor="@color/white"
                    android:textSize="12sp"/>

            </RelativeLayout>



            <RelativeLayout
                android:id="@+id/rv4"
                android:visibility="gone"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:background="@drawable/settings_button_back"
                android:layout_height="80dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:onClick="onClick"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                >

                <Switch
                    android:id="@+id/switch4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"/>

                <ImageView
                    android:id="@+id/iv_homekey_exit_app"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/ic_exit"/>

                <TextView
                    android:id="@+id/tv_homekey_exit_app"
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@id/iv_homekey_exit_app"
                    android:text="@string/fast_exit"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_homekey_exit_app"
                    android:layout_toEndOf="@id/iv_homekey_exit_app"
                    android:layout_toStartOf="@id/switch4"
                    android:text="@string/fast_exit_when_press_home_key"
                    android:textColor="@color/white"
                    android:textSize="12sp"/>
            </RelativeLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="Password Settings"
                android:textColor="@color/colorAccent" />

            <RelativeLayout
                android:id="@+id/rv5"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:background="@drawable/settings_button_back"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:onClick="onClick"
                android:paddingTop="15dp"
                android:paddingBottom="15dp">

                <ImageView
                    android:id="@+id/iv4"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_change_pass" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/iv4"
                    android:text="Change Password"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rv6"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:background="@drawable/settings_button_back"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:onClick="onClick"
                android:paddingTop="15dp"
                android:paddingBottom="15dp">

                <ImageView
                    android:id="@+id/iv5"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_security" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/iv5"
                    android:text="@string/security_question"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="Advanced Settings"
                android:textColor="@color/colorAccent" />


            <RelativeLayout
                android:id="@+id/rv11"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:background="@drawable/settings_button_back"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:onClick="onClick"
                android:paddingTop="15dp"
                android:paddingBottom="15dp">

                <ImageView
                    android:id="@+id/iv52"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_security" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/iv52"
                    android:text="Change App Icon"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="About"
                android:textColor="@color/colorAccent" />

            <RelativeLayout
                android:id="@+id/rv9"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:background="@drawable/settings_button_back"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:onClick="onClick"
                android:paddingTop="15dp"
                android:paddingBottom="15dp">

                <ImageView
                    android:id="@+id/iv8"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_star" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/iv8"
                    android:text="Rate Us"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rv7"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:background="@drawable/settings_button_back"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:onClick="onClick"
                android:paddingTop="15dp"
                android:paddingBottom="15dp">

                <ImageView
                    android:id="@+id/iv6"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_help" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/iv6"
                    android:text="Help"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rv8"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:background="@drawable/settings_button_back"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:onClick="onClick"
                android:paddingTop="15dp"
                android:paddingBottom="15dp">

                <ImageView
                    android:id="@+id/iv7"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_assignment" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/iv7"
                    android:text="Privacy Policy"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </RelativeLayout>

            <TextView
                android:id="@+id/appversion"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                 />


        </LinearLayout>
    </ScrollView>
</LinearLayout>